fixed the grid responsive look and alignment

--- a/am.css
+++ b/am.css
@@ -51,6 +51,7 @@ div.card1 {
   grid-auto-rows: minmax(200px, auto);
   margin-top: 15px;
   padding: 10px;
+  align-self:end;
 
   
   /* margin-left: 20px;
@@ -58,8 +59,8 @@ div.card1 {
   width: 350px;
   height: 140px;
   padding: 15px;
-  margin-top: 550px;
-} */
+  margin-top: 550px;*/
+}
 
 ul,
 li {
